crates/math-core/tests/snapshots/error_test__unknown_color_no_braces.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{\\color - x}"
---
Error: Unknown color "-".
   ╭─[ <input>:1:9 ]
   │
 1 │ {\color - x}
   │         ┬  
   │         ╰── unknown color
───╯
